--- a/ShefJam2Project/Assembly-CSharp.csproj
+++ b/ShefJam2Project/Assembly-CSharp.csproj
@@ -45,10 +45,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BannerController.cs" />
+     <Compile Include="Assets\Scripts\BulletController.cs" />
+     <Compile Include="Assets\Scripts\EventHandler.cs" />
      <Compile Include="Assets\Scripts\MyPlayerController.cs" />
      <Compile Include="Assets\Scripts\MyPlayerController2.cs" />
+     <Compile Include="Assets\Scripts\P1AmmoKeeper.cs" />
+     <Compile Include="Assets\Scripts\P1ScoreKeeper.cs" />
+     <Compile Include="Assets\Scripts\P2AmmoKeeper.cs" />
+     <Compile Include="Assets\Scripts\P2ScoreKeeper.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\Scripts\ProjectileController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity5/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
